Grammar fixes. Done for now!

--- a/goals.html
+++ b/goals.html
@@ -25,27 +25,25 @@
         <main id="goals-main">
             <section id="goals-intro">
                 <h2>Career Goals</h2>
-                <p>My vision of a sucessful career in the tech industry is one where I can work collaboratively with a team to solve complex
-                    problems in an ethical and secure manner to ensure the confidentiality of the information of our customers.
-                    I would like the opportunity to work in a field where there is always something new to learn or a new problem to solve, while also 
-                    having the support of a team of like-minded individuals who I can learn from.
+                <p>My vision of a successful career in the tech industry is one where I can work collaboratively with a team to solve complex problems in an
+                     ethical and secure manner to ensure the confidentiality of the information of our customers. I would like to work in a field where there is always 
+                     something new to learn or a new problem to solve while also having the support of a team of like-minded individuals who I can learn from.
                 </p>
                 <video src="./media/office_video.mp4" controls muted autoplay></video>
             </section>
 
             <section id="plan">
-                <p>Upon graduating from Western Governors University I plan to have already had at least one internship, and hopefully an offer to become a 
-                    full time employee. With this in mind, it is important that I use the opportunity of a college education to ensure that by the time I am 
-                    ready to enter the workforce, I already have the skills necessary to succeed.
+                <p>Upon graduating from Western Governors University, I plan to have at least one internship and an offer to become a 
+                    full-time employee. With this in mind, I must use the opportunity of a college education to ensure that by the time I am 
+                    ready to enter the workforce, I already have the skills necessary to succeed. College is an exciting opportunity to learn new skills I can use in a career.
                 </p>
                 <img src="./images/office.png" alt="multiple people working in an office"> 
             </section>
 
             <section id="future">
-                <p>In the future I see myself as a senior developer who other people can feel comfortable coming to for help. I enjoy working with others to solve a problem
-                    and I want to set an enviornment where it is okay for people to ask others for help or to work collaboratively to come up with a solution.
-                    The development process should be social. Our experiences differ and we can use those different experiences to help each other.
-                </p>
+                <p>In the future, I see myself as a senior developer who others can feel comfortable coming to for help. I enjoy working with others to solve a problem.
+                    I want to set an environment where it is okay for people to ask others for help or work collaboratively to come up with a solution.
+                    The development process should be social. Our experiences differ, and we can use those different experiences to help each other. </p>
                 <img src="./images/girl_working.jpg" alt="woman working on a computer">
             </section>
             <hr>
